lab6/back/service-back.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: demo-apps
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
